syntax = "proto3";
  
package caber.macaron;

import "google/protobuf/timestamp.proto";

// Represents geologic traits associated with a financial entity.
message CommonTrait {
  // Trading symbol
  string symbol = 1;

  // Timestamp of inception and termination of this org.
  google.protobuf.Timestamp inception_timestamp = 2;
  google.protobuf.Timestamp termination_timestamp = 3;

  // Profile.
  string business_summary = 4;
  string sector = 5;
  string industry = 6;
}
